--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Replace org.libsdl.testgles with the identifier of your game below, e.g.
-     com.gamemaker.game
--->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.libsdl.testgles"
+      package="org.sseefried.epidemic"
       android:versionCode="1"
       android:versionName="1.0"
       android:installLocation="auto">
 
-    <!-- Create a Java class extending testglesActivity and place it in a
+    <!-- Create a Java class extending Activity and place it in a
          directory under src matching the package, e.g.
          	src/com/gamemaker/game/MyGame.java
 
@@ -22,7 +19,7 @@
                  android:allowBackup="true"
                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                  android:hardwareAccelerated="true" >
-        <activity android:name="testglesActivity"
+        <activity android:name="Activity"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
                   android:configChanges="keyboardHidden|orientation"
@@ -38,7 +35,7 @@
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="14" />
 
     <!-- OpenGL ES 2.0 -->
-    <uses-feature android:glEsVersion="0x00020000" /> 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" /> 
 
     <!-- Allow writing to external storage -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
