--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.declarative.games.epidemic"
-      android:versionCode="2"
+      package="com.declarative.games.epidemic.beta"
+      android:versionCode="1"
       android:versionName="0.0.1"
       android:installLocation="auto">
 
